31.oct (ws)
      - fix #3155: Color and position of flags/hook are not saved
      - fix #13413: navigator issues with single page
      - fix #12695: navigator not updating when adding/removing pages
      - first "figured bass" support (shift+l); works similar as lyrics
      - reduce flicker when updating navigator
      - fix #3798: Grace notes were created with stem direction "UP", should be "AUTO"
30.oct (ws)
      - fix #9307: Nested tuplets causes crash
      (la)
      - fix #11473: Preference values overwritten on program initialisation
      - fix #11952: Default SoundFont doesn't sound or appear in Synthesizer
29.oct (ws)
      - fix #4748: Right click on note should also show measure and staff properties
      - fix #13405: Page must be clicked to hear sound change in Mixer
      - fix #12572: Clicking page during playback shortens sound of notes
      - fix #3573: Volta brackets do not anchor to nearest bar line
      - implement #3704: Small note heads in chords
      - fix #3798: Grace note stem direction in multi-voice context
      - fix #13390: Sound doesn't change after changing it in mixer
      - fix #13391: Sound continues after mute or solo
      - fix #13400: If a slur is moved, new position is not saved
      - fix #13034: Tie direction for chords
28.oct (ws)
      - more robust reading of corrupted file (#13357 corrupted key signature)
      - fix #13363: Recent change to repeat bar dot
      - fix #13364: Score tabs disappear
      - fix #13375: Dragging rest ot ledger lines and undo doesn't produce stave rest
      - fix: sometimes a tuplet bracket is left when deleting a whole measure
      - fix repeat ("r") command
      - overhaul tuplet handling
26.oct (ws)
      - new feature: dragging a staff/measure up/down increases/decreases staff distance
        in a system score wide. This changes the style parameter akkoladeDistance/staffDistance
        for a single staff.
25.oct (ws)